@@ -384,3 +384,22 @@ on a console.
 
 new to pygame 1.9.0
 <END>
+
+
+
+scroll.main
+run a Surface.scroll example that shows a magnified image
+pygame.examples.scroll.main(image_file=None): return None
+
+This example shows a scrollable image that has a zoom factor of eight.
+It uses the Surface.scroll function to shift the image on the display
+surface. A clip rectangle protects a margin area. If called as a function,
+the example accepts an optional image file path. If run as a program
+it takes an optional file path command line argument. If no file
+is provided a default image file is used.
+
+When running click on a black triangle to move one pixel in the direction
+the triangle points. Or use the arrow keys. Close the window or press ESC
+to quit.
+<END>
+
