@@ -186,6 +186,18 @@ This will return the affected Surface area.
 <END>
 
 
+scroll
+Shift the surface image in place
+Surface.scroll(dx=0, dy=0): return None
+
+Move the image by dx pixels right and dy pixels down. dx and dy may be negative
+for left and up scrolls respectively. Areas of the surface that are not
+overwritten retain their original pixel values. Scrolling is contained
+by the Surface clip area. It is safe to have dx and dy values that exceed
+the surface size.
+<END>
+
+
 set_colorkey
 Set the transparent colorkey
 Surface.set_colorkey(Color, flags=0): return None
